<?xml version="1.0"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.mvpiq</groupId>
  <artifactId>mvpiq</artifactId>
  <version>1.0.0-SNAPSHOT</version>
    <properties>
        <compiler-plugin.version>3.11.0</compiler-plugin.version>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
        <quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
        <quarkus.platform.version>3.8.3</quarkus.platform.version>
        <skipITs>true</skipITs>
        <surefire-plugin.version>3.0.0</surefire-plugin.version>
        <djl.version>0.27.0</djl.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${quarkus.platform.group-id}</groupId>
                <artifactId>${quarkus.platform.artifact-id}</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.38</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
  <dependencies>
      <dependency>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-arc</artifactId>
      </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-hibernate-orm-panache</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy-jackson</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-security-jpa</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-smallrye-openapi</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-resteasy</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-hibernate-orm</artifactId>
    </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-hibernate-validator</artifactId>
    </dependency>

      <dependency>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-jdbc-postgresql</artifactId>
      </dependency>

    <dependency>
      <groupId>io.quarkus</groupId>
      <artifactId>quarkus-junit5</artifactId>
      <scope>test</scope>
    </dependency>

      <dependency>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-vertx-http</artifactId>
      </dependency>

      <dependency>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-cache</artifactId>
      </dependency>

      <dependency>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-rest-client-jackson</artifactId>
      </dependency>

      <!-- Firebase FCM for Push Notifications -->
      <dependency>
          <groupId>com.google.firebase</groupId>
          <artifactId>firebase-admin</artifactId>
          <version>9.2.0</version>
      </dependency>

      <dependency>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-jsonb</artifactId>
      </dependency>

      <dependency>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-resteasy-multipart</artifactId>
      </dependency>

      <dependency>
          <groupId>io.quarkus</groupId>
          <artifactId>quarkus-smallrye-jwt</artifactId>
      </dependency>

    <dependency>
      <groupId>io.rest-assured</groupId>
      <artifactId>rest-assured</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.38</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
      <groupId>org.mindrot</groupId>
      <artifactId>jbcrypt</artifactId>
      <version>0.4</version>
    </dependency>

      <dependency>
          <groupId>io.smallrye</groupId>
          <artifactId>smallrye-jwt-build</artifactId>
      </dependency>

      <dependency>
          <groupId>com.twelvemonkeys.imageio</groupId>
          <artifactId>imageio-jpeg</artifactId>
          <version>3.9.4</version>
      </dependency>

      <dependency>
          <groupId>org.bytedeco</groupId>
          <artifactId>ffmpeg-platform</artifactId>
          <version>6.1.1-1.5.10</version>
      </dependency>

      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-math3</artifactId>
          <version>3.6.1</version>
      </dependency>

      <!-- ONNX runtime -->
      <dependency>
          <groupId>ai.djl.onnxruntime</groupId>
          <artifactId>onnxruntime-engine</artifactId>
          <version>${djl.version}</version>
      </dependency>

      <!-- Tensorflow model zoo -->
      <dependency>
          <groupId>ai.djl.tensorflow</groupId>
          <artifactId>tensorflow-model-zoo</artifactId>
          <version>${djl.version}</version>
      </dependency>

      <!-- DJL core -->
      <dependency>
          <groupId>ai.djl</groupId>
          <artifactId>api</artifactId>
          <version>${djl.version}</version>
      </dependency>

      <!-- Model zoo -->
      <dependency>
          <groupId>ai.djl</groupId>
          <artifactId>model-zoo</artifactId>
          <version>${djl.version}</version>
      </dependency>

      <!-- Tensorflow engine (per MoveNet) -->
      <dependency>
          <groupId>ai.djl.tensorflow</groupId>
          <artifactId>tensorflow-engine</artifactId>
          <version>${djl.version}</version>
      </dependency>

      <!-- Tensorflow native runtime -->
      <dependency>
          <groupId>ai.djl.tensorflow</groupId>
          <artifactId>tensorflow-native-auto</artifactId>
          <version>2.4.1</version>
      </dependency>

      <dependency>
          <groupId>org.ow2.asm</groupId>
          <artifactId>asm</artifactId>
          <version>9.6</version>
      </dependency>

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>${quarkus.platform.group-id}</groupId>
        <artifactId>quarkus-maven-plugin</artifactId>
        <version>${quarkus.platform.version}</version>
        <extensions>true</extensions>
        <executions>
          <execution>
            <goals>
              <goal>build</goal>
              <goal>generate-code</goal>
              <goal>generate-code-tests</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler-plugin.version}</version>
        <configuration>
          <compilerArgs>
            <arg>-parameters</arg>
          </compilerArgs>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>1.18.38</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
        <configuration>
          <systemPropertyVariables>
            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
            <maven.home>${maven.home}</maven.home>
          </systemPropertyVariables>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${surefire-plugin.version}</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
            <configuration>
              <systemPropertyVariables>
                <native.image.path>${project.build.directory}/${project.build.finalName}-runner</native.image.path>
                <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
                <maven.home>${maven.home}</maven.home>
              </systemPropertyVariables>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>native</id>
      <activation>
        <property>
          <name>native</name>
        </property>
      </activation>
      <properties>
        <skipITs>false</skipITs>
        <quarkus.package.type>native</quarkus.package.type>
      </properties>
    </profile>
  </profiles>
</project>
